--- a/w01d02/homework/resume_page/index.html
+++ b/w01d02/homework/resume_page/index.html
@@ -6,5 +6,18 @@
   </head>
   <body>
     <h1>Todd C. Gerdy</h1>
+    <img src="http://i.imgur.com/tWWHrui.jpg?1" alt="Todd C Gerdy"/>
+    <h3>Previous jobs</h3>
+      <ul>
+        <li>Director of Shop/Warehouse Operations</li>
+        <li>Production Supervisor</li>
+        <li>Carpenter</li>
+      </ul>
+    <h3>Social Media</h3>
+      <ul>
+        <li><a href="https://www.linkedin.com/in/toddgerdy/">LinkedIn</a></li>
+        <li><a href="https://www.facebook.com/Toadilicious?ref=bookmarks">Facebook</a></li>
+        <li><a href="https://twitter.com/NerdyToddGerdy">Twitter</a></li>
+      </ul>
   </body>
 </html>
