Commit 7 - Added initial styling for resume site

--- a/w01d02/homework/resume_page/index.html
+++ b/w01d02/homework/resume_page/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Todd C. Gerdy</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
   </head>
   <body>
     <h1>Todd C. Gerdy</h1>
