Commit 8 - Added project.html page and content

--- a/w01d02/homework/resume_page/projects.html
+++ b/w01d02/homework/resume_page/projects.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Todd C. Gerdy - Home</title>
+    <title>Todd C. Gerdy - Projects</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
     <nav>
@@ -16,13 +16,11 @@
     </nav>
   </head>
   <body>
-    <h1>Todd C. Gerdy</h1>
-    <img src="http://i.imgur.com/tWWHrui.jpg?1" alt="Todd C Gerdy"/>
-    <h3>Previous jobs</h3>
-      <ul>
-        <li>Director of Shop/Warehouse Operations</li>
-        <li>Production Supervisor</li>
-        <li>Carpenter</li>
-      </ul>
+    <h2>Projects</h2>
+    <ol>
+      <li>Updated Warehouse/Quoting software for company's needs</li>
+      <li>Ate 2 plates for lunch</li>
+      <li>Worked with friends to create a game (...in progress)</li>
+    </ol>
   </body>
 </html>
