--- a/w01d02/homework/resume_page/index.html
+++ b/w01d02/homework/resume_page/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
     <nav>
-      <ul>
-        <li><a href="index.html">Home Page</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="https://www.linkedin.com/in/toddgerdy/">LinkedIn</a></li>
-        <li><a href="https://www.facebook.com/Toadilicious">Facebook</a></li>
-        <li><a href="https://twitter.com/NerdyToddGerdy">Twitter</a></li>
+      <ul class="links">
+        <li id="navLink"><a href="index.html">Home Page</a></li>
+        <li id="navLink"><a href="projects.html">Projects</a></li>
+        <li id="navLink"><a href="https://www.linkedin.com/in/toddgerdy/">LinkedIn</a></li>
+        <li id="navLink"><a href="https://www.facebook.com/Toadilicious">Facebook</a></li>
+        <li id="navLink"><a href="https://twitter.com/NerdyToddGerdy">Twitter</a></li>
       </ul>
     </nav>
   </head>
@@ -20,9 +20,9 @@
     <img src="http://i.imgur.com/tWWHrui.jpg?1" alt="Todd C Gerdy"/>
     <h3>Previous jobs</h3>
       <ul>
-        <li>Director of Shop/Warehouse Operations</li>
-        <li>Production Supervisor</li>
-        <li>Carpenter</li>
+        <li class="jobs">Director of Shop/Warehouse Operations</li>
+        <li class="jobs">Production Supervisor</li>
+        <li class="jobs">Carpenter</li>
       </ul>
   </body>
 </html>
